# vgsa

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
conf/: collect_rollouts.yaml  gen_perturbation.yaml  run_attack.yaml  train_pm.yaml
conf/attacker/: cpa.yaml  sta.yaml  vgsa.yaml
conf/gym_env/: atari_base.yaml  breakout.yaml  mspacman.yaml  pong.yaml  qbert.yaml  space_invaders.yaml
conf/next_obs_pm/: atari.yaml  atari_encoded.yaml  atari_ram.yaml
conf/next_state_pm/: atari_base.yaml  atari_encoded.yaml  atari_obs.yaml  atari_ram.yaml
conf/next_state_pm_trainer/: atari_base.yaml  atari_encoded.yaml  atari_obs.yaml  atari_ram.yaml
conf/policy/: a2c.yaml  dqn.yaml  ppo.yaml
src/: run_attack.py
src/attacker/: vgsa.py
src/prediction_model/: obs_prediction_model.py  policy_enc_prediction_model.py  ram_prediction_model.py
src/prediction_model/model/: __init__.py  (+2 more)
src/run/: run_attack.py
src/run_attack/: run.py
src/util/: config_definitions.py  mem_usage.py  path_builder.py  set_global_seed.py
src/victim/: __init__.py  enc_actor_critic_victim.py  enc_dqn_victim.py
wandb/: latest-run
wandb/run-20260424_145802-kap6nymy/: run-kap6nymy.wandb
wandb/run-20260424_145926-is5kxu3a/: run-is5kxu3a.wandb
wandb/run-20260424_151126-1frfswdj/: run-1frfswdj.wandb
wandb/run-20260424_155245-h7imjogd/: run-h7imjogd.wandb
wandb/run-20260429_171106-rx95kud5/: run-rx95kud5.wandb
wandb/run-20260429_171308-32qo34dv/: run-32qo34dv.wandb
wandb/run-20260429_171428-1zl3nbb2/: run-1zl3nbb2.wandb
wandb/run-20260429_171507-wwa6ut5k/: run-wwa6ut5k.wandb
(+69 files in other folders)
