[project]
name = "vgsa"
version = "0.1.0"
description = "Value-Guided Strategic Attack (VGSA): An envrionment agnostic observation space attack against DRL trained policies."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attacks-on-drl>=0.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 120
